tmp: switch packet ccm to use custom image
Signed-off-by: Mateusz Gozdek <mateusz@kinvolk.io>

--- a/assets/charts/control-plane/packet-ccm/templates/deployment.yaml
+++ b/assets/charts/control-plane/packet-ccm/templates/deployment.yaml
@@ -32,7 +32,7 @@ spec:
         - key: "node-role.kubernetes.io/master"
           effect: NoSchedule
       containers:
-      - image: packethost/packet-ccm:{{.Chart.AppVersion}}
+      - image: quay.io/invidian/packet-ccm:latest-amd64
         name: packet-cloud-controller-manager
         command:
           - "./packet-cloud-controller-manager"
