packet-ccm: limit nodes which have BGP enabled using new selector
Added in https://github.com/packethost/packet-ccm/pull/101.

Refs #548

Signed-off-by: Mateusz Gozdek <mateusz@kinvolk.io>

--- a/assets/charts/control-plane/packet-ccm/templates/deployment.yaml
+++ b/assets/charts/control-plane/packet-ccm/templates/deployment.yaml
@@ -41,6 +41,9 @@ spec:
           - "--allow-untagged-cloud=true"
           - "--provider-config=/etc/cloud-sa/cloud-sa.json"
           - "--v=2"
+        env:
+        - name: PACKET_BGP_NODE_SELECTOR
+          value: lokomotive.alpha.kinvolk.io/bgp-enabled=true
         resources:
           requests:
             cpu: 100m
