packet-ccm: disable MetalLB ConfigMap management
We do not use this feature, so it should be disabled.

Signed-off-by: Mateusz Gozdek <mateusz@kinvolk.io>

--- a/assets/charts/control-plane/packet-ccm/templates/deployment.yaml
+++ b/assets/charts/control-plane/packet-ccm/templates/deployment.yaml
@@ -50,6 +50,8 @@ spec:
           value: metallb.lokomotive.io/peer-asn
         - name: PACKET_ANNOTATION_PEER_IPS
           value: metallb.lokomotive.io/peer-address
+        - name: PACKET_LB_CONFIGMAP
+          value: disabled
         resources:
           requests:
             cpu: 100m
